# django-practice-modules-codes

Module_10.5/: pyproject.toml
Module_10.5/blog/: views.py
Module_10.5/blog/templates/blog/: index.html
Module_10.5/core/: settings.py
module11.5/: README.md  pyproject.toml
module11.5/core/: settings.py  urls.py
module11.5/product/: views.py
module11.5/static/: style.css
module11.5/templates/: base.html  index.html
module15.5/: db.sqlite3  pyproject.toml
module15.5/Musicians_Directory/: settings.py  urls.py
module15.5/album/: admin.py  forms.py  models.py  urls.py  views.py
module15.5/album/migrations/: 0001_initial.py
module15.5/album/templates/album/: add_album.html  list_album.html
module15.5/musician/: admin.py  forms.py  models.py  urls.py  views.py
module15.5/musician/migrations/: 0001_initial.py
module15.5/musician/templates/musician/: add_musician.html  list_musician.html
module15.5/templates/layouts/: appLayout.html
module_14.5/: requirements.txt
module_14.5/core/: settings.py  urls.py
module_14.5/formApp/: forms.py  models.py  urls.py  views.py
module_14.5/formApp/migrations/: 0001_initial.py
module_14.5/templates/: HtmlForm.html  base.html  django_form.html  employee_form.html  student_form.html
