[tool.poetry]
name = "module_10.5"
version = "0.1.0"
description = "This is Django Practice project"
authors = ["Mizanur Rahman <mizan.prog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
